kitsune/sumo/static/less/customercare.less
@import 'variables.less';
@import 'vendors.less';

#infinite-scroll {
  text-align: center;
}

#refresh-busy {
  display: none;
}

#stats {
  margin-top: 30px;

  > p,
  > span {
    color: @textLightGrey;
    font-size: 13px;
    margin: 5px 10px;

    > strong {
      color: @textGrey;
    }
  }

  > span {
    float: right;
  }
}

#steps {
  .btn {
    margin-top: 8px;
  }

  ol {
    list-style: none;
    margin: 82px 0 0 0;
    padding: 0;

    li {
      counter-increment: item;
      float: left;
      font-family: @OpenSansLight;
      font-size: 22px;
      padding: 40px 0 0 0;
      position: relative;

      &:before {
        background: #fff;
        .border-radius(13px);
        content: counter(item);
        height: 26px;
        left: 0;
        line-height: 26px;
        position: absolute;
        text-align: center;
        top: 0;
        width: 26px;
      }
    }
  }
}
#tweet-tools {
  float: right;
  margin: 20px 0;
}

#tweets {
  list-style: none;
  margin: 0;
  padding: 0;

  .replies {
    margin: 20px 40px 40px 40px;
  }

  .tweet {
    background: #fff;
    padding: 20px;
    margin-bottom: 20px;

    .avatar {
      float: left;

      img {
        width: 48px;
        height: 48px;
      }
    }

    .tweet-contents {
      font-size: 13px;
      margin-left: 58px;

      p {
        margin: 6px 0 10px 0;
      }

      .reply-button {
        background: @iconsSprite -49px -1789px no-repeat;
        color: @textBlue;
        cursor: pointer;
        float: left;
        padding-left: 24px;
        margin-right: 10px;

        &:hover {
          color: @textDarkBlue;
          text-decoration: underline;
        }
      }

      .reply-count {
        color: @textGreen;
        cursor: pointer;
        float: left;
      }

      .remove-tweet {
        float: right;
      }

      .tweet-time,
      .tweet-time:visited,
      .tweet-time:hover {
        color: @textLightGrey;
        float: right;
      }

      .user-meta,
      .user-meta:visited,
      .user-meta:hover {
        color: @textGrey;
        font-family: @OpenSansLight;
        font-size: 20px;
      }
    }
  }
}

#top-aoa-contributors {
  background: white;
  padding: 10px 15px;

  h2 {
    margin: 0 0 5px 0;
  }

  .aoa-contributor {
    margin-bottom: 15px;
    position: relative;

    .avatar {
      float: left;
      position: relative;
      top: 8px;
      width: 48px;
      height: 48px;
      background: #fff;
      margin-right: 8px;
      .box-shadow(0px 0px 2px 1px rgba(0, 0, 0, 0.2));
    }

    .user-meta {
      display: block;
      padding-left: 60px;

      .twittername {
        color: @textGrey;
        font-family: @OpenSansLight;
        font-size: 20px;
        display: block;
      }
    }

    .stat {
      display: inline-block;
      margin: 3px;
      font-weight: bold;
      color: #333;

      .count {
        font-size: 1.1en;
        display: block;
        margin-top: -4px;
      }
      .timeperiod {
        font-size: 0.7em;
        text-transform: uppercase;
        display: block;
        margin-top: -3px;
      }
    }
  }
}

/*
*   Modal Styles
*   TODO: Restyle the modals
*/

#twitter-logout {
  display: inline;
}

#twitter-modal {
  text-align: left;
}

#twitter-modal h4 {
  font-size: 135%;
  margin-bottom: 5px;
}

#twitter-modal p {
  margin: 0 0 10px 0;
}

.btn.register {
  margin: 0 0 0 14px;
}

.btn.signin-twitter {
  float: none;
  width: 300px;
}

#reply-container {
  background-color: #fff;
  font-family: Verdana, sans-serif;
  margin: 0 auto;
  text-align: left;
  top: 86px;
}

#reply-container,
#reply-container #replies {
  border-radius: 4px;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
}

#initial-tweet img {
  border: 1px solid #bbb;
  float: left;
}

#initial-tweet .box {
  background: #fff;
  border: 1px solid #aaa;
  color: #69645b;
  display: block;
  font-size: 80%;
  margin-left: 70px;
  padding: 6px 9px 10px 9px;
  text-align: left;
}

#initial-tweet a.twittername {
  color: #2276bb;
  font-weight: bold;
  text-decoration: none;
}

#initial-tweet a.avatar {
  display: inline;
}

#initial-tweet .text {
  padding-top: 4px;
}

#initial-tweet #arrow {
  border: 0;
  left: 75px;
  position: absolute;
  top: 60px;
}

#reply-container h4 {
  color: #4b4740;
  font-family: Verdana, sans-serif;
  font-size: 125%;
  font-weight: normal;
  margin-bottom: 15px;
}

#reply-container #replies {
  background: #8fc1da;
  background: -moz-linear-gradient(center top, #8fc1da, #e5f1f7) repeat;
  background: -webkit-gradient(linear, center top, center bottom, from(#8fc1da), to(#e5f1f7));
  margin-top: 20px;
  padding: 15px 20px;
}

#reply-container h3.ui-accordion-header {
  background: #f0f0f0 url('../img/customercare/expander-closed.png') 8px 50% no-repeat;
  border: 1px solid #b2b2b2;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  font-family: Verdana, sans-serif;
  font-size: 12px;
  margin: 0 0 9px 0;
  padding: 4px 0 5px 24px;
}

#reply-container h3.ui-accordion-header a {
  color: #69645b;
  display: block;
}

#reply-container h3.ui-accordion-header a:hover {
  text-decoration: none;
}

#reply-container #replies ul {
  list-style-type: none;
  margin: 0 0 10px 24px;
}

#reply-container #replies li a {
  color: #0489b7;
  display: block;
  padding-bottom: 2px;
}

#reply-container #no-responses a {
  color: #447BC4;
}

#reply-container h3.ui-accordion-header.ui-state-default {
  background: #f0f0f0 url('../img/customercare/expander-closed.png') 8px 50% no-repeat;
}

#reply-container h3.ui-accordion-header.ui-state-active {
  background: #f0f0f0 url('../img/customercare/expander-open.png') 8px 50% no-repeat;
}

#reply-container h3.ui-accordion-header.ui-state-default a {
  color: #69645b;
  font-weight: normal;
}

#reply-container h3.ui-accordion-header.ui-state-active a {
  color: #69645b;
  font-weight: bold;
}

#accordion .ui-widget-content {
  background: none;
  border: none;
}

.topics .snippet {
  display: none;
}

#reply {
  padding-bottom: 34px;
}
#reply .desc {
  color: #69645B;
  font-size: 85%;
  margin-bottom: 10px;
  width: 340px;
}

#reply-message {
  background: #fff;
  border: 1px solid #aaa;
  height: 65px;
  font-size: .9em;
  padding: 10px 15px;
  width:325px;
}

#reply #reply-arrow {
  display: inline;
  left: 30px;
  position: relative;
  top: 5px;
}

#error-message,
#submit-message {
  color: #4b4740;
  display: none;
  float: left;
  font-weight: bold;
  height: 21px;
  margin-top: 14px;
}

#submit-message {
  background: url('../img/customercare/reply-check.png') right top no-repeat;
  padding-right: 23px;
  padding-top: 3px;
}

#error-message {
  background: url('../img/customercare/notification-error.png') left 4px no-repeat;
  padding-left: 20px;
  padding-top: 3px;
}

#reply .container {
  position: relative;
  top: -12px;
}

#reply .submitButton {
  background: -moz-linear-gradient(center top, #eed052 15px, #ebb04f 18px, #e79f30, #e0752b);
/* color-stop percentages according to height */
  background: -webkit-gradient(linear, center top, center bottom, color-stop(.417, #eed052), color-stop(.5, #ebb04f), color-stop(.75, #e79f30), to(#e0752b));
  border-left: 1px solid #d4661a;
  border-right: 1px solid #d4661a;
  border-top: 1px solid #d19f7c;
  border-bottom: 1px solid #ba5c1c;
  border-radius: 6px;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
  box-shadow: 0 0 5px #777;
  -moz-box-shadow: 0 0 5px #777;
  color: #b01a04;
  cursor: pointer;
  float: right;
  height: 36px;
  line-height: 36px;
  margin-top: 10px;
  text-align: center;
  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.6);
  width: 140px;
}

#submit-busy {
  display: none;
  height: 13px;
  padding-left: 5px;
  width: 13px;
}

#reply .submitButton.busy {
  background: -moz-linear-gradient(center top, #ccc 15px, #ccc 18px, #aaa, #aaa);
  background: -webkit-gradient(linear, center top, center bottom, color-stop(.417, #ccc), color-stop(.5, #ccc), color-stop(.75, #aaa), to(#aaa));
  border-color: #aaa;
  color: #666;
}

#reply .submitButton.busy #submit-busy {
  display: inline;
}

#reply .character-counter {
  color: #fff;
  float: right;
  font-weight: bold;
  font-size: 24px;
  position: relative;
  top: 33px;
  width: 50px;

  &.too-many {
    color: #c00;
  }
}

